# monthly-report

./: alembic.ini  db.py  excel.py  inventory.db  main.py  pyproject.toml
flask_app/: main.py
flask_app/config/: settings.py
flask_app/crud/: material_crud.py
flask_app/db/: __init__.py  db.py  models.py  schema.sql  session.py
flask_app/migrations/: env.py
flask_app/migrations/versions/: 2024_11_26_1550-613f9d11e79b_initial_migration.py
flask_app/schemas/: __init__.py  material_scheme.py
flask_app/templates/: list_of_given_products.html
flask_app/utils/: exceptions.py
static/: add_product.css  list_of_given_products.css
templates/: add_product.html  list_of_given_products.html
