[tool.poetry]
name = "monthly report"
version = "0.1.0"
description = "This project will be prepares xlsx report every month!"
authors = ["Lordd1s <uaudias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.1.0"
SQLAlchemy = "^2.0.36"
Jinja2 = "^3.1.4"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
marshmallow = "^3.23.1"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
